--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <form action="">
+        <input type="text" name="" class="" id="">
+        <button type="submit" class="submit-btn">Ajouter</button>
+    </form>
+    <ul class="tasks-list"></ul>
     <script src="app.js"></script>
 </body>
 </html>
