--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       />
       <button type="submit" class="submit-btn">Add Task</button>
     </form>
-    <div class="tasks-list"></div>
+    <tasks-list></tasks-list>
     <script src="app.js" type="module"></script>
   </body>
 </html>
