add priority level

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         id=""
         placeholder="Clean room, do homework..."
       />
+      <select name="" id="priority-selector">
+        <option value="low">low</option>
+        <option value="normal">normal</option>
+        <option value="urgent">urgent</option>
+      </select>
       <button type="submit" class="submit-btn">Add Task</button>
     </form>
     <tasks-list></tasks-list>
